--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_TMDB_API_KEY = c45a857c193f6302f2b5061c3b85e743
 
-BASE_URL = https://api.themoviedb.org/3
+VITE_BASE_URL = https://api.themoviedb.org/3
 
 VITE_BASE_MOVIE_URL =  https://api.themoviedb.org/3/movie
 
